--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -105,7 +105,7 @@ window#waybar {
     background-color: #FF7731;
 }
 
-#mpris.spotify, #mpris.spotifyd {
+#mpris.spotify, #mpris.spotifyd, #mpris.spotify_player {
     background-color: #18C16A;
     color: black;
 }
