--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -8,7 +8,7 @@
 }
 
 window#waybar {
-    background: rgba(30, 30, 30, 0.5);
+    background: transparent;
     color: #ECEFF4;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.6);
 }
